# volt-rs

./: .gitignore  Cargo.toml  README.md  example.vt
src/: compiler.rs  errors.rs  lexer.rs  macros.rs  main.rs  parser.rs  spanned.rs  volt.lalrpop
src/ast/: expressions.rs  mod.rs  node.rs  references.rs  statements.rs
src/compiler/: compiler.rs  context.rs  emit.rs  mod.rs
src/errors/: mod.rs  syntax_error.rs
src/parser/: mod.rs  numeric_literals.rs  parser.rs
src/types/: checker.rs  env.rs  expression.rs  expressions.rs  functions.rs  mod.rs  typ.rs
