[package]
name = "volt"
version = "0.1.0"
edition = "2021"

[dependencies]
lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
regex = "1.11.1"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
codespan-reporting = "0.12.0"
unindent = "0.2.4"
lazy_static = "1.5.0"


[build-dependencies]
lalrpop = "0.22.1"
